--- a/log.ipynb
+++ b/log.ipynb
@@ -145,6 +145,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 10/12/24\n",
+    "Проходили:\n",
+    "\n",
+    "1. Повторили точки разрыва второго рода\n",
+    "2. Функция sng\n",
+    "3. Виды асимптот\n",
+    "4. Понятие ряда, общий член\n",
+    "5. Исследование ряда на сходимость\n",
+    "6. Гармонические ряды"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
